fix: logs color in dark mode

--- a/neetbox/frontend/src/components/dashboard/project/logs.css
+++ b/neetbox/frontend/src/components/dashboard/project/logs.css
@@ -1,3 +1,33 @@
-[theme-mode="dark"] .log-tag {
-  background-color: #333;
+.log-item {
+  margin-bottom: 5px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 13px;
+
+  .log-tag {
+    display: inline-block;
+    --log-tag-bg-hs: 0, 0%;
+    --log-tag-bg-l: 80%;
+    background-color: hsl(var(--log-tag-bg-hs), var(--log-tag-bg-l));
+    padding: 0 3px;
+    border-radius: 5px;
+  }
+  .log-prefix-info {
+    --log-tag-bg-hs: 222, 80%;
+  }
+  .log-prefix-ok {
+    --log-tag-bg-hs: 128, 80%;
+  }
+  .log-prefix-warning {
+    --log-tag-bg-hs: 55, 80%;
+  }
+  .log-prefix-debug {
+    --log-tag-bg-hs: 277, 80%;
+  }
+  .log-prefix-error {
+    --log-tag-bg-hs: 0, 80%;
+  }
+}
+
+[theme-mode="dark"] .log-item .log-tag {
+  --log-tag-bg-l: 30%;
 }
